--- a/Base/skeleton/build
+++ b/Base/skeleton/build
@@ -12,24 +12,12 @@ mkdir -m 755 \
 	"$DESTDIR/usr/include" \
 	"$DESTDIR/usr/lib" \
 	"$DESTDIR/usr/share" \
-	"$DESTDIR/usr/share/man" \
-	"$DESTDIR/usr/share/man/man1" \
-	"$DESTDIR/usr/share/man/man2" \
-	"$DESTDIR/usr/share/man/man3" \
-	"$DESTDIR/usr/share/man/man4" \
-	"$DESTDIR/usr/share/man/man5" \
-	"$DESTDIR/usr/share/man/man6" \
-	"$DESTDIR/usr/share/man/man7" \
-	"$DESTDIR/usr/share/man/man8" \
 	"$DESTDIR/var" \
 	"$DESTDIR/var/cache" \
 	"$DESTDIR/var/log" \
-	"$DESTDIR/var/log/old" \
 	"$DESTDIR/var/lib" \
-	"$DESTDIR/var/lib/misc" \
 	"$DESTDIR/var/empty" \
-	"$DESTDIR/var/service" \
-	"$DESTDIR/var/spool"
+	"$DESTDIR/var/service"
 
 mkdir -m 555 \
 	"$DESTDIR/proc" \
@@ -39,13 +27,10 @@ mkdir -m 0750 "$DESTDIR/root"
 
 mkdir -m 1777 \
 	"$DESTDIR/tmp" \
-	"$DESTDIR/var/tmp" \
-	"$DESTDIR/var/spool/mail"
+	"$DESTDIR/var/tmp"
 
-ln -sf usr/bin "$DESTDIR/bin"
-ln -sf usr/lib "$DESTDIR/lib"
-
-ln -sf spool/mail          "$DESTDIR/var/mail"
+ln -sf usr/bin             "$DESTDIR/bin"
+ln -sf usr/lib             "$DESTDIR/lib"
 ln -sf ../run              "$DESTDIR/var/run"
 ln -sf ../run/lock         "$DESTDIR/var/lock"
 ln -sf ../proc/self/mounts "$DESTDIR/etc/mtab"
