--- a/Archive/libarchive/build
+++ b/Archive/libarchive/build
@@ -30,5 +30,6 @@ ln -sf bsdunzip "$DESTDIR/usr/bin/unzip"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libarchive@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libarchive@$VERSION.tar.gz
 exit
