--- a/Base/mime-types/build
+++ b/Base/mime-types/build
@@ -5,5 +5,6 @@ install -Dm644 mime-processed "$DESTDIR/etc/mime.types"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > mime-types@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../mime-types@$VERSION.tar.gz
 exit
