--- a/Base/oksh/build
+++ b/Base/oksh/build
@@ -18,5 +18,6 @@ ln -sf oksh "$DESTDIR/usr/bin/sh"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > oksh@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../oksh@$VERSION.tar.gz
 exit
