--- a/Devel/libffi/build
+++ b/Devel/libffi/build
@@ -16,5 +16,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libffi@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libffi@$VERSION.tar.gz
 exit
