--- a/Devel/libmpc/build
+++ b/Devel/libmpc/build
@@ -15,5 +15,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libmpc@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libmpc@$VERSION.tar.gz
 exit
