--- a/Fonts/ttf-hack/build
+++ b/Fonts/ttf-hack/build
@@ -7,5 +7,6 @@ cp ttf/*.ttf "$DESTDIR/usr/share/fonts/TTF"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > ttf-hack@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../ttf-hack@$VERSION.tar.gz
 exit
