--- a/Fonts/ttf-twemoji-color/build
+++ b/Fonts/ttf-twemoji-color/build
@@ -8,5 +8,6 @@ install -Dm644 LICENSE-CC-BY.txt "$DESTDIR/usr/share/LICENSES/ttf-twemoji-color.
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > ttf-twemoji-color@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../ttf-twemoji-color@$VERSION.tar.gz
 exit
