--- a/Net/git/build
+++ b/Net/git/build
@@ -32,5 +32,6 @@ tar -xf ../git-manpages-$VERSION.tar.xz -C "$DESTDIR/usr/share/man"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > git@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../git@$VERSION.tar.gz
 exit
