--- a/System/libressl/build
+++ b/System/libressl/build
@@ -18,5 +18,6 @@ install -Dm644 COPYING "$DESTDIR/usr/share/LICENSES/libressl.license"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libressl@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libressl@$VERSION.tar.gz
 exit
