--- a/Wayland/libevdev/build
+++ b/Wayland/libevdev/build
@@ -13,5 +13,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libevdev@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libevdev@$VERSION.tar.gz
 exit
