--- a/Archive/zlib/build
+++ b/Archive/zlib/build
@@ -16,5 +16,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > zlib@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../zlib@$VERSION.tar.gz
 exit
