--- a/Base/musl/build
+++ b/Base/musl/build
@@ -52,5 +52,6 @@ chmod 755 "$DESTDIR/usr/bin/ldd"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > musl@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../musl@$VERSION.tar.gz
 exit
