--- a/Base/runit/build
+++ b/Base/runit/build
@@ -29,5 +29,6 @@ ln -sf /usr/lib/init/rc.shutdown "$DESTDIR/etc/runit/3"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > runit@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../runit@$VERSION.tar.gz
 exit
