--- a/Base/toybox/build
+++ b/Base/toybox/build
@@ -19,5 +19,6 @@ done
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > toybox@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../toybox@$VERSION.tar.gz
 exit
