--- a/Devel/bc/build
+++ b/Devel/bc/build
@@ -17,5 +17,6 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > bc@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../bc@$VERSION.tar.gz
 exit
