--- a/Devel/libgmp/build
+++ b/Devel/libgmp/build
@@ -18,5 +18,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libgmp@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libgmp@$VERSION.tar.gz
 exit
