--- a/Devel/m4/build
+++ b/Devel/m4/build
@@ -16,5 +16,6 @@ rm -rf "$DESTDIR/usr/share/info"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > m4@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../m4@$VERSION.tar.gz
 exit
