--- a/Devel/make/build
+++ b/Devel/make/build
@@ -17,5 +17,6 @@ rm -rf "$DESTDIR/usr/share/info"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > make@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../make@$VERSION.tar.gz
 exit
