--- a/Devel/meson/build
+++ b/Devel/meson/build
@@ -13,5 +13,6 @@ rm -rf "$DESTDIR/usr/share/polkit-1"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > meson@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../meson@$VERSION.tar.gz
 exit
