--- a/Devel/pkgconf/build
+++ b/Devel/pkgconf/build
@@ -17,5 +17,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > pkgconf@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../pkgconf@$VERSION.tar.gz
 exit
