--- a/Fonts/ttf-gentium-plus/build
+++ b/Fonts/ttf-gentium-plus/build
@@ -10,5 +10,6 @@ install -Dm644 OFL.txt "$DESTDIR/usr/share/LICENSES/ttf-gentium-plus.license"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > ttf-gentium-plus@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../ttf-gentium-plus@$VERSION.tar.gz
 exit
