--- a/Lang/binutils/build
+++ b/Lang/binutils/build
@@ -32,5 +32,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > binutils@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../binutils@$VERSION.tar.gz
 exit
