--- a/Python/mako/build
+++ b/Python/mako/build
@@ -12,5 +12,6 @@ find "$DESTDIR/usr/lib" -type f -name '*.so' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > mako@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../mako@$VERSION.tar.gz
 exit
