--- a/System/file/build
+++ b/System/file/build
@@ -20,5 +20,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > file@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../file@$VERSION.tar.gz
 exit
