--- a/System/libedit/build
+++ b/System/libedit/build
@@ -18,5 +18,6 @@ rm -rf "$DESTDIR/usr/share/man/man3"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libedit@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libedit@$VERSION.tar.gz
 exit
