--- a/System/linux-headers/build
+++ b/System/linux-headers/build
@@ -9,5 +9,6 @@ find usr/include -name \*.h -type f -exec install -Dm644 {} $DESTDIR/{} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > linux-headers@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../linux-headers@$VERSION.tar.gz
 exit
