--- a/System/ncurses/build
+++ b/System/ncurses/build
@@ -17,5 +17,6 @@ find "$DESTDIR" -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > ncurses@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../ncurses@$VERSION.tar.gz
 exit
