--- a/System/sqlite/build
+++ b/System/sqlite/build
@@ -24,5 +24,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > sqlite@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../sqlite@$VERSION.tar.gz
 exit
