--- a/System/tzdata/build
+++ b/System/tzdata/build
@@ -25,5 +25,6 @@ strip --strip-unneeded "$DESTDIR/usr/bin/zdump"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > tzdata@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../tzdata@$VERSION.tar.gz
 exit
