--- a/Text/mandoc/build
+++ b/Text/mandoc/build
@@ -25,5 +25,6 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \; -exec chmod 7
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > mandoc@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../mandoc@$VERSION.tar.gz
 exit
