--- a/Text/nextvi/build
+++ b/Text/nextvi/build
@@ -11,5 +11,6 @@ strip --strip-unneeded "$DESTDIR/usr/bin/vi"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > nextvi@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../nextvi@$VERSION.tar.gz
 exit
