--- a/Text/scdoc/build
+++ b/Text/scdoc/build
@@ -10,5 +10,6 @@ strip --strip-unneeded "$DESTDIR/usr/bin/scdoc"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > scdoc@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../scdoc@$VERSION.tar.gz
 exit
