--- a/Wayland/libglvnd/build
+++ b/Wayland/libglvnd/build
@@ -13,5 +13,6 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libglvnd@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libglvnd@$VERSION.tar.gz
 exit
