--- a/Wayland/libinput/build
+++ b/Wayland/libinput/build
@@ -26,5 +26,6 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libinput@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libinput@$VERSION.tar.gz
 exit
