--- a/Wayland/libxkbcommon/build
+++ b/Wayland/libxkbcommon/build
@@ -27,5 +27,6 @@ strip --strip-unneeded "$DESTDIR/usr/bin/xkbcli"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > libxkbcommon@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../libxkbcommon@$VERSION.tar.gz
 exit
