--- a/Wayland/pixman/build
+++ b/Wayland/pixman/build
@@ -21,5 +21,6 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > pixman@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../pixman@$VERSION.tar.gz
 exit
