--- a/Wayland/wayland-protocols/build
+++ b/Wayland/wayland-protocols/build
@@ -15,5 +15,6 @@ meson -C build install -d "$DESTDIR"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > wayland-protocols@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../wayland-protocols@$VERSION.tar.gz
 exit
