--- a/Wayland/wlroots/build
+++ b/Wayland/wlroots/build
@@ -20,5 +20,6 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > wlroots@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../wlroots@$VERSION.tar.gz
 exit
