--- a/Wayland/xkeyboard-config/build
+++ b/Wayland/xkeyboard-config/build
@@ -20,5 +20,6 @@ mv "$DESTDIR/usr/share/pkgconfig" "$DESTDIR/usr/lib/pkgconfig"
 
 su
 chown -R root:root $DESTDIR
-tar -c $DESTDIR/* | gzip2 > xkeyboard-config@$VERSION.tar.gz
+cd $DESTDIR
+tar -c * | gzip > ../xkeyboard-config@$VERSION.tar.gz
 exit
