--- a/Net/iproute2/build
+++ b/Net/iproute2/build
@@ -3,8 +3,7 @@
 xz -cd iproute2-$VERSION.tar.xz | tar -x
 cd iproute2-$VERSION
 
-# From upstream. Will be removed on next version
-patch -p1 < ../missing-include-of-time.patch
+patch -p1 < ../fix-missing-includes.patch
 
 sed -i 's/CC := gcc/CC ?= gcc/g' Makefile
 
@@ -15,8 +14,8 @@ make KERNEL_INCLUDE=y
 install -Dm755 ip/ip "$DESTDIR/usr/bin/ip"
 install -Dm755 tc/tc "$DESTDIR/usr/bin/tc"
 
-install -Dm0644 include/libnetlink.h "$DESTDIR/usr/include/libnetlink.h"
-install -Dm0644 lib/libnetlink.a     "$DESTDIR/usr/lib/libnetlink.a"
+install -Dm644 include/libnetlink.h "$DESTDIR/usr/include/libnetlink.h"
+install -Dm644 lib/libnetlink.a     "$DESTDIR/usr/lib/libnetlink.a"
 
 mkdir -p "$DESTDIR/usr/share/man/man8"
 cp man/man8/ip* "$DESTDIR/usr/share/man/man8"
