--- a/Base/musl/build
+++ b/Base/musl/build
@@ -1,8 +1,8 @@
 #!/bin/sh -e
 
 mkdir -p "$DESTDIR/usr/bin"
-$CC $CFLAGS getent.c   -o "$DESTDIR/usr/bin/getent"
-$CC $CFLAGS getconf.c  -o "$DESTDIR/usr/bin/getconf"
+$CC $CFLAGS -static getent.c   -o "$DESTDIR/usr/bin/getent"
+$CC $CFLAGS -static getconf.c  -o "$DESTDIR/usr/bin/getconf"
 
 install -Dm755 cdefs.h "$DESTDIR/usr/include/sys/cdefs.h"
 install -Dm755 queue.h "$DESTDIR/usr/include/sys/queue.h"
