--- a/Net/curl/build
+++ b/Net/curl/build
@@ -24,7 +24,7 @@ cd curl-$VERSION
 make
 make DESTDIR="$DESTDIR" install-strip
 
-rm -rf "$DESTDIR/usr/share/aclocal"
+rm -rf "$DESTDIR/usr/share"
 
 find $DESTDIR -type f -name '*.la' -delete
 
