Build archives in the proper path

--- a/Archive/bzip2/build
+++ b/Archive/bzip2/build
@@ -41,6 +41,5 @@ ln -sf "libbz2.so.$VERSION" "$DESTDIR/usr/lib/libbz2.so.$MAJOR.$MINOR"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../bzip2@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../bzip2@$VERSION.tar.gz
 exit
