--- a/Base/skalibs/build
+++ b/Base/skalibs/build
@@ -26,6 +26,5 @@ find $DESTDIR -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../skalibs@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../skalibs@$VERSION.tar.gz
 exit
