--- a/Devel/libmpc/build
+++ b/Devel/libmpc/build
@@ -26,6 +26,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../libmpc@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../libmpc@$VERSION.tar.gz
 exit
