--- a/Lang/python/build
+++ b/Lang/python/build
@@ -72,6 +72,5 @@ find "$DESTDIR/usr/lib" -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../python@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../python@$VERSION.tar.gz
 exit
