--- a/Net/ca-certificates/build
+++ b/Net/ca-certificates/build
@@ -14,6 +14,5 @@ install -Dm644 cacert-$VERSION.pem "$DESTDIR/etc/ssl/cert.pem"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../ca-certificates@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../ca-certificates@$VERSION.tar.gz
 exit
