--- a/Archive/libarchive/build
+++ b/Archive/libarchive/build
@@ -41,6 +41,5 @@ ln -sf bsdunzip "$DESTDIR/usr/bin/unzip"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../libarchive@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../libarchive@$VERSION.tar.gz
 exit
