--- a/Archive/pigz/build
+++ b/Archive/pigz/build
@@ -25,6 +25,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/pigz"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../pigz@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../pigz@$VERSION.tar.gz
 exit
