--- a/Base/init-scripts/build
+++ b/Base/init-scripts/build
@@ -30,6 +30,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/kpow"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../init-scripts@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../init-scripts@$VERSION.tar.gz
 exit
