--- a/Base/nupk/build
+++ b/Base/nupk/build
@@ -14,6 +14,5 @@ install -Dm755 -t "$DESTDIR/usr/bin" nupk.git/nupk
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../nupk@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../nupk@$VERSION.tar.gz
 exit
