--- a/Base/runit/build
+++ b/Base/runit/build
@@ -39,6 +39,5 @@ ln -sf /usr/lib/init/rc.shutdown "$DESTDIR/etc/runit/3"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../runit@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../runit@$VERSION.tar.gz
 exit
