--- a/Base/util-linux/build
+++ b/Base/util-linux/build
@@ -47,6 +47,5 @@ rmdir "$DESTDIR/usr/sbin"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../util-linux@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../util-linux@$VERSION.tar.gz
 exit
