--- a/Devel/bc/build
+++ b/Devel/bc/build
@@ -28,6 +28,5 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../bc@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../bc@$VERSION.tar.gz
 exit
