--- a/Devel/gdb/build
+++ b/Devel/gdb/build
@@ -27,6 +27,5 @@ rm -rf "$DESTDIR/usr/share/info"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../gdb@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../gdb@$VERSION.tar.gz
 exit
