--- a/Devel/libffi/build
+++ b/Devel/libffi/build
@@ -27,6 +27,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../libffi@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../libffi@$VERSION.tar.gz
 exit
