--- a/Devel/libmpfr/build
+++ b/Devel/libmpfr/build
@@ -27,6 +27,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../libmpfr@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../libmpfr@$VERSION.tar.gz
 exit
