--- a/Devel/muon/build
+++ b/Devel/muon/build
@@ -23,6 +23,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/muon"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../muon@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../muon@$VERSION.tar.gz
 exit
