--- a/Fs/e2fsprogs/build
+++ b/Fs/e2fsprogs/build
@@ -40,6 +40,5 @@ rmdir "$DESTDIR/usr/share/info"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../e2fsprogs@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../e2fsprogs@$VERSION.tar.gz
 exit
