--- a/Net/curl/build
+++ b/Net/curl/build
@@ -41,6 +41,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../curl@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../curl@$VERSION.tar.gz
 exit
