--- a/Net/dhcpcd/build
+++ b/Net/dhcpcd/build
@@ -35,6 +35,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/dhcpcd"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../dhcpcd@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../dhcpcd@$VERSION.tar.gz
 exit
