--- a/Net/iproute2/build
+++ b/Net/iproute2/build
@@ -38,6 +38,5 @@ strip --strip-unneeded "$DESTDIR/usr/lib/libnetlink.a"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../iproute2@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../iproute2@$VERSION.tar.gz
 exit
