--- a/System/expat/build
+++ b/System/expat/build
@@ -28,6 +28,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../expat@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../expat@$VERSION.tar.gz
 exit
