--- a/System/libudev-zero/build
+++ b/System/libudev-zero/build
@@ -21,6 +21,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../libudev-zero@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../libudev-zero@$VERSION.tar.gz
 exit
