--- a/System/tzdata/build
+++ b/System/tzdata/build
@@ -35,6 +35,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/zdump"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../tzdata@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../tzdata@$VERSION.tar.gz
 exit
