--- a/Text/nextvi/build
+++ b/Text/nextvi/build
@@ -21,6 +21,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/vi"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../nextvi@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../nextvi@$VERSION.tar.gz
 exit
