--- a/Text/scdoc/build
+++ b/Text/scdoc/build
@@ -20,6 +20,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/scdoc"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../scdoc@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../scdoc@$VERSION.tar.gz
 exit
