--- a/Wayland/libdisplay-info/build
+++ b/Wayland/libdisplay-info/build
@@ -29,6 +29,5 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../libdisplay-info@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../libdisplay-info@$VERSION.tar.gz
 exit
