--- a/Wayland/libglvnd/build
+++ b/Wayland/libglvnd/build
@@ -23,6 +23,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../libglvnd@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../libglvnd@$VERSION.tar.gz
 exit
