--- a/Wayland/libinput/build
+++ b/Wayland/libinput/build
@@ -37,6 +37,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../libinput@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../libinput@$VERSION.tar.gz
 exit
