--- a/Wayland/libxkbcommon/build
+++ b/Wayland/libxkbcommon/build
@@ -38,6 +38,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/xkbcli"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../libxkbcommon@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../libxkbcommon@$VERSION.tar.gz
 exit
