--- a/Wayland/mtdev/build
+++ b/Wayland/mtdev/build
@@ -22,6 +22,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../mtdev@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../mtdev@$VERSION.tar.gz
 exit
