--- a/Wayland/pixman/build
+++ b/Wayland/pixman/build
@@ -32,6 +32,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../pixman@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../pixman@$VERSION.tar.gz
 exit
