--- a/Wayland/seatd/build
+++ b/Wayland/seatd/build
@@ -30,6 +30,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../seatd@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../seatd@$VERSION.tar.gz
 exit
