--- a/Wayland/wlroots/build
+++ b/Wayland/wlroots/build
@@ -31,6 +31,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../wlroots@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../wlroots@$VERSION.tar.gz
 exit
