--- a/Wayland/xkeyboard-config/build
+++ b/Wayland/xkeyboard-config/build
@@ -31,6 +31,5 @@ mv "$DESTDIR/usr/share/pkgconfig" "$DESTDIR/usr/lib/pkgconfig"
 
 su
 chown -R root:root $DESTDIR
-cd $DESTDIR
-tar -c * | gzip > ../xkeyboard-config@$VERSION.tar.gz
+tar -c -C $DESTDIR . | gzip > ../xkeyboard-config@$VERSION.tar.gz
 exit
