--- a/System/ncurses/build
+++ b/System/ncurses/build
@@ -9,7 +9,7 @@ VERSION=0.3.2
 mkdir temporary-builddir
 DESTDIR=temporary-builddir
 
-curl --location --remote-name --skip-existing https://github.com/sabotage-linux/netbsd-curses/archive/refs/tags/v.tar.gz
+curl --location --remote-name --skip-existing https://github.com/sabotage-linux/netbsd-curses/archive/refs/tags/v$VERSION.tar.gz
 gzip -cd v$VERSION.tar.gz | tar -x
 cd netbsd-curses-$VERSION
 
@@ -21,8 +21,8 @@ ln -sf libterminfo.a  "$DESTDIR/usr/lib/libtinfo.a"
 
 rm -rf "$DESTDIR/usr/share/man/man3"
 
-find "$DESTDIR/usr/bin"       -type f -exec strip --strip-unneeded {} \;
-find "$DESTDIR" -name '*.a'   -type f -exec strip --strip-unneeded {} \;
+find "$DESTDIR/usr/bin" ! -name 'clear' -type f -exec strip --strip-unneeded {} \;
+find "$DESTDIR" -name '*.a' -type f -exec strip --strip-unneeded {} \;
 find "$DESTDIR" -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 
 su
