--- a/Net/openssh/build
+++ b/Net/openssh/build
@@ -3,8 +3,8 @@
 PRETTY_NAME=openssh
 MAJOR=9
 MINOR=7
-PATCH=1
-VERSION=9.1
+PATCH=p1
+VERSION=9.7p1
 
 mkdir temporary-builddir
 DESTDIR=temporary-builddir
@@ -33,10 +33,6 @@ cd openssh-$VERSION
 
 make
 make DESTDIR="$DESTDIR" install
-
-cp -f contrib/ssh-copy-id   "$DESTDIR/usr/bin"
-cp -f contrib/ssh-copy-id.1 "$DESTDIR/usr/share/man/man1"
-chmod +x "$DESTDIR/usr/bin/ssh-copy-id"
 
 install -Dm755 ../sshd.run "$DESTDIR/etc/sv/sshd/run" 
 ln -sf /run/runit/supervise.sshd "$DESTDIR/etc/sv/sshd/supervise"
